--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required( VERSION 3.0 )
 project( pep2csv-project VERSION 1.0 )
 
 set( CMAKE_CXX_STANDARD 17 )
-set( CMAKE_BUILD_TYPE Debug )
+set( CMAKE_BUILD_TYPE Release )
+set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/ )
 
 # Add and build ANTLR parser generator
